private : false (was true originally)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "food-app",
   "homepage":"https://lekkha.github.io/food-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
